Second Website Changes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Welcome to My Website!</h1>
         <nav>
             <ul>
-                <li><a href="second_page.html">Go to Second Page</a></li>
-                <li><a href="https://www.linkedin.com/in/scott-anderson-b09100233/">External Link</a></li>
+                <li><a href="second_page.html">Go to my second page!</a></li>
+                <li><a href="https://www.linkedin.com/in/scott-anderson-b09100233/">Check out my LinkedIn</a></li>
             </ul>
         </nav>
     </header>
